parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CARACTER_ERROR
    COMENTARIOS
    COMENTARIO_BLOQUE
    ENTERO_SOBREPASADO
    NUMERO_DECIMAL_CON_ERROR
    NUMERO_DECIMAL_CON_ERROR2
    PALABRA_RESERVADA_MAIN
    PALABRA_RESERVADA_NULL
    TIPO_DECIMAL
    VARIABLE_ERROR

Grammar

Rule 0     S' -> program
Rule 1     program -> declList
Rule 2     declList -> declList decl
Rule 3     declList -> decl
Rule 4     decl -> varDecl
Rule 5     decl -> funDecl
Rule 6     decl -> LINEAS
Rule 7     varDecl -> typeSpec varDeclList SEMICOLON
Rule 8     scopedVarDecl -> PALABRA_RESERVADA_STATIC typeSpec varDeclList SEMICOLON
Rule 9     scopedVarDecl -> typeSpec varDeclList SEMICOLON
Rule 10    varDeclList -> varDeclList COMA varDeclInit
Rule 11    varDeclList -> varDeclInit
Rule 12    varDeclInit -> varDeclId
Rule 13    varDeclInit -> varDeclId COLON simpleExp
Rule 14    varDeclId -> VARIABLE
Rule 15    varDeclId -> VARIABLE CORCHETE_IZQUIERDO NUMERO_ENTERO CORCHETE_DERECHO
Rule 16    typeSpec -> TIPO_ENTERO
Rule 17    typeSpec -> PALABRA_RESERVADA_BOOL
Rule 18    typeSpec -> TIPO_CARACTER
Rule 19    funDecl -> typeSpec VARIABLE PARENTESIS_IZQUIERDO parms PARENTESIS_DERECHO stmt
Rule 20    funDecl -> VARIABLE PARENTESIS_IZQUIERDO parms PARENTESIS_DERECHO stmt
Rule 21    parms -> parmList
Rule 22    parms -> eps
Rule 23    parmList -> parmList SEMICOLON parmTypeList
Rule 24    parmList -> parmTypeList
Rule 25    parmTypeList -> typeSpec parmIdList
Rule 26    parmIdList -> parmIdList COMA parmId
Rule 27    parmIdList -> parmId
Rule 28    parmId -> VARIABLE
Rule 29    parmId -> VARIABLE CORCHETE_IZQUIERDO CORCHETE_DERECHO
Rule 30    stmt -> expStmt
Rule 31    stmt -> compoundStmt
Rule 32    stmt -> selectStmt
Rule 33    stmt -> iterStmt
Rule 34    stmt -> returnStmt
Rule 35    stmt -> breakStmt
Rule 36    expStmt -> exp SEMICOLON
Rule 37    expStmt -> SEMICOLON
Rule 38    compoundStmt -> LLAVE_IZQ localDecls stmtList LLAVE_DER
Rule 39    localDecls -> localDecls scopedVarDecl
Rule 40    localDecls -> eps
Rule 41    stmtList -> stmtList stmt
Rule 42    stmtList -> eps
Rule 43    selectStmt -> PALABRA_RESERVADA_IF simpleExp PALABRA_RESERVADA_THEN stmt
Rule 44    selectStmt -> PALABRA_RESERVADA_IF simpleExp PALABRA_RESERVADA_THEN stmt PALABRA_RESERVADA_ELSE stmt
Rule 45    iterStmt -> BUCLE_WHILE simpleExp PALABRA_RESERVADA_DO stmt
Rule 46    iterStmt -> BUCLE_FOR VARIABLE ASIGNACION iterRange PALABRA_RESERVADA_DO stmt
Rule 47    iterRange -> simpleExp PALABRA_RESERVADA_TO simpleExp
Rule 48    iterRange -> simpleExp PALABRA_RESERVADA_TO simpleExp PALABRA_RESERVADA_BY simpleExp
Rule 49    returnStmt -> PALABRA_RESERVADA_RETURN SEMICOLON
Rule 50    returnStmt -> PALABRA_RESERVADA_RETURN exp SEMICOLON
Rule 51    breakStmt -> PALABRA_RESERVADA_BREAK SEMICOLON
Rule 52    exp -> mutable ASIGNACION exp
Rule 53    exp -> mutable SUMA_RESULTADO exp
Rule 54    exp -> mutable RESTA_RESULTADO exp
Rule 55    exp -> mutable MULTI_RESULTADO exp
Rule 56    exp -> mutable DIVI_RESULTADO exp
Rule 57    exp -> mutable INCREMENTO
Rule 58    exp -> mutable DECREMENTO
Rule 59    exp -> simpleExp
Rule 60    simpleExp -> simpleExp PALABRA_RESERVADA_OR andExp
Rule 61    simpleExp -> andExp
Rule 62    andExp -> andExp PALABRA_RESERVADA_AND unaryRelExp
Rule 63    andExp -> unaryRelExp
Rule 64    unaryRelExp -> PALABRA_RESERVADA_NOT unaryRelExp
Rule 65    unaryRelExp -> relExp
Rule 66    relExp -> minmaxExp relop minmaxExp
Rule 67    relExp -> minmaxExp
Rule 68    relop -> MENOR_IGUAL
Rule 69    relop -> MENOR
Rule 70    relop -> MAYOR
Rule 71    relop -> MAYOR_IGUAL
Rule 72    relop -> IGUAL
Rule 73    relop -> DISTINTO
Rule 74    minmaxExp -> minmaxExp minmaxop sumExp
Rule 75    minmaxExp -> sumExp
Rule 76    minmaxop -> PUNTOS_MAYOR_PUNTOS
Rule 77    minmaxop -> PUNTOS_MENOR_PUNTOS
Rule 78    sumExp -> sumExp sumop mulExp
Rule 79    sumExp -> mulExp
Rule 80    sumop -> OPERADOR_SUMA
Rule 81    sumop -> OPERADOR_RESTA
Rule 82    mulExp -> mulExp mulop unaryExp
Rule 83    mulExp -> unaryExp
Rule 84    mulop -> OPERADOR_MULTIPLICAR
Rule 85    mulop -> OPERADOR_DIVIDIR
Rule 86    mulop -> OPERADOR_MODULO
Rule 87    unaryExp -> unaryop unaryExp
Rule 88    unaryExp -> factor
Rule 89    unaryop -> OPERADOR_RESTA
Rule 90    unaryop -> OPERADOR_MULTIPLICAR
Rule 91    unaryop -> OP_TERNARIO
Rule 92    factor -> immutable
Rule 93    factor -> mutable
Rule 94    mutable -> VARIABLE
Rule 95    mutable -> VARIABLE CORCHETE_IZQUIERDO exp CORCHETE_DERECHO
Rule 96    immutable -> PARENTESIS_IZQUIERDO exp PARENTESIS_DERECHO
Rule 97    immutable -> call
Rule 98    immutable -> constant
Rule 99    call -> VARIABLE PARENTESIS_IZQUIERDO args PARENTESIS_DERECHO
Rule 100   args -> argList
Rule 101   args -> eps
Rule 102   argList -> argList COMA exp
Rule 103   argList -> exp
Rule 104   constant -> NUMERO_ENTERO
Rule 105   constant -> NUMERO_DECIMAL
Rule 106   constant -> CARACTER
Rule 107   constant -> CADENA
Rule 108   constant -> PALABRA_RESERVADA_TRUE
Rule 109   constant -> PALABRA_RESERVADA_FALSE
Rule 110   eps -> <empty>

Terminals, with rules where they appear

ASIGNACION           : 46 52
BUCLE_FOR            : 46
BUCLE_WHILE          : 45
CADENA               : 107
CARACTER             : 106
CARACTER_ERROR       : 
COLON                : 13
COMA                 : 10 26 102
COMENTARIOS          : 
COMENTARIO_BLOQUE    : 
CORCHETE_DERECHO     : 15 29 95
CORCHETE_IZQUIERDO   : 15 29 95
DECREMENTO           : 58
DISTINTO             : 73
DIVI_RESULTADO       : 56
ENTERO_SOBREPASADO   : 
IGUAL                : 72
INCREMENTO           : 57
LINEAS               : 6
LLAVE_DER            : 38
LLAVE_IZQ            : 38
MAYOR                : 70
MAYOR_IGUAL          : 71
MENOR                : 69
MENOR_IGUAL          : 68
MULTI_RESULTADO      : 55
NUMERO_DECIMAL       : 105
NUMERO_DECIMAL_CON_ERROR : 
NUMERO_DECIMAL_CON_ERROR2 : 
NUMERO_ENTERO        : 15 104
OPERADOR_DIVIDIR     : 85
OPERADOR_MODULO      : 86
OPERADOR_MULTIPLICAR : 84 90
OPERADOR_RESTA       : 81 89
OPERADOR_SUMA        : 80
OP_TERNARIO          : 91
PALABRA_RESERVADA_AND : 62
PALABRA_RESERVADA_BOOL : 17
PALABRA_RESERVADA_BREAK : 51
PALABRA_RESERVADA_BY : 48
PALABRA_RESERVADA_DO : 45 46
PALABRA_RESERVADA_ELSE : 44
PALABRA_RESERVADA_FALSE : 109
PALABRA_RESERVADA_IF : 43 44
PALABRA_RESERVADA_MAIN : 
PALABRA_RESERVADA_NOT : 64
PALABRA_RESERVADA_NULL : 
PALABRA_RESERVADA_OR : 60
PALABRA_RESERVADA_RETURN : 49 50
PALABRA_RESERVADA_STATIC : 8
PALABRA_RESERVADA_THEN : 43 44
PALABRA_RESERVADA_TO : 47 48
PALABRA_RESERVADA_TRUE : 108
PARENTESIS_DERECHO   : 19 20 96 99
PARENTESIS_IZQUIERDO : 19 20 96 99
PUNTOS_MAYOR_PUNTOS  : 76
PUNTOS_MENOR_PUNTOS  : 77
RESTA_RESULTADO      : 54
SEMICOLON            : 7 8 9 23 36 37 49 50 51
SUMA_RESULTADO       : 53
TIPO_CARACTER        : 18
TIPO_DECIMAL         : 
TIPO_ENTERO          : 16
VARIABLE             : 14 15 19 20 28 29 46 94 95 99
VARIABLE_ERROR       : 
error                : 

Nonterminals, with rules where they appear

andExp               : 60 61 62
argList              : 100 102
args                 : 99
breakStmt            : 35
call                 : 97
compoundStmt         : 31
constant             : 98
decl                 : 2 3
declList             : 1 2
eps                  : 22 40 42 101
exp                  : 36 50 52 53 54 55 56 95 96 102 103
expStmt              : 30
factor               : 88
funDecl              : 5
immutable            : 92
iterRange            : 46
iterStmt             : 33
localDecls           : 38 39
minmaxExp            : 66 66 67 74
minmaxop             : 74
mulExp               : 78 79 82
mulop                : 82
mutable              : 52 53 54 55 56 57 58 93
parmId               : 26 27
parmIdList           : 25 26
parmList             : 21 23
parmTypeList         : 23 24
parms                : 19 20
program              : 0
relExp               : 65
relop                : 66
returnStmt           : 34
scopedVarDecl        : 39
selectStmt           : 32
simpleExp            : 13 43 44 45 47 47 48 48 48 59 60
stmt                 : 19 20 41 43 44 44 45 46
stmtList             : 38 41
sumExp               : 74 75 78
sumop                : 78
typeSpec             : 7 8 9 19 25
unaryExp             : 82 83 87
unaryRelExp          : 62 63 64
unaryop              : 87
varDecl              : 4
varDeclId            : 12 13
varDeclInit          : 10 11
varDeclList          : 7 8 9 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declList
    (2) declList -> . declList decl
    (3) declList -> . decl
    (4) decl -> . varDecl
    (5) decl -> . funDecl
    (6) decl -> . LINEAS
    (7) varDecl -> . typeSpec varDeclList SEMICOLON
    (19) funDecl -> . typeSpec VARIABLE PARENTESIS_IZQUIERDO parms PARENTESIS_DERECHO stmt
    (20) funDecl -> . VARIABLE PARENTESIS_IZQUIERDO parms PARENTESIS_DERECHO stmt
    (16) typeSpec -> . TIPO_ENTERO
    (17) typeSpec -> . PALABRA_RESERVADA_BOOL
    (18) typeSpec -> . TIPO_CARACTER

    LINEAS          shift and go to state 6
    VARIABLE        shift and go to state 8
    TIPO_ENTERO     shift and go to state 9
    PALABRA_RESERVADA_BOOL shift and go to state 10
    TIPO_CARACTER   shift and go to state 11

    program                        shift and go to state 1
    declList                       shift and go to state 2
    decl                           shift and go to state 3
    varDecl                        shift and go to state 4
    funDecl                        shift and go to state 5
    typeSpec                       shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> declList .
    (2) declList -> declList . decl
    (4) decl -> . varDecl
    (5) decl -> . funDecl
    (6) decl -> . LINEAS
    (7) varDecl -> . typeSpec varDeclList SEMICOLON
    (19) funDecl -> . typeSpec VARIABLE PARENTESIS_IZQUIERDO parms PARENTESIS_DERECHO stmt
    (20) funDecl -> . VARIABLE PARENTESIS_IZQUIERDO parms PARENTESIS_DERECHO stmt
    (16) typeSpec -> . TIPO_ENTERO
    (17) typeSpec -> . PALABRA_RESERVADA_BOOL
    (18) typeSpec -> . TIPO_CARACTER

    $end            reduce using rule 1 (program -> declList .)
    LINEAS          shift and go to state 6
    VARIABLE        shift and go to state 8
    TIPO_ENTERO     shift and go to state 9
    PALABRA_RESERVADA_BOOL shift and go to state 10
    TIPO_CARACTER   shift and go to state 11

    decl                           shift and go to state 12
    varDecl                        shift and go to state 4
    funDecl                        shift and go to state 5
    typeSpec                       shift and go to state 7

state 3

    (3) declList -> decl .

    LINEAS          reduce using rule 3 (declList -> decl .)
    VARIABLE        reduce using rule 3 (declList -> decl .)
    TIPO_ENTERO     reduce using rule 3 (declList -> decl .)
    PALABRA_RESERVADA_BOOL reduce using rule 3 (declList -> decl .)
    TIPO_CARACTER   reduce using rule 3 (declList -> decl .)
    $end            reduce using rule 3 (declList -> decl .)


state 4

    (4) decl -> varDecl .

    LINEAS          reduce using rule 4 (decl -> varDecl .)
    VARIABLE        reduce using rule 4 (decl -> varDecl .)
    TIPO_ENTERO     reduce using rule 4 (decl -> varDecl .)
    PALABRA_RESERVADA_BOOL reduce using rule 4 (decl -> varDecl .)
    TIPO_CARACTER   reduce using rule 4 (decl -> varDecl .)
    $end            reduce using rule 4 (decl -> varDecl .)


state 5

    (5) decl -> funDecl .

    LINEAS          reduce using rule 5 (decl -> funDecl .)
    VARIABLE        reduce using rule 5 (decl -> funDecl .)
    TIPO_ENTERO     reduce using rule 5 (decl -> funDecl .)
    PALABRA_RESERVADA_BOOL reduce using rule 5 (decl -> funDecl .)
    TIPO_CARACTER   reduce using rule 5 (decl -> funDecl .)
    $end            reduce using rule 5 (decl -> funDecl .)


state 6

    (6) decl -> LINEAS .

    LINEAS          reduce using rule 6 (decl -> LINEAS .)
    VARIABLE        reduce using rule 6 (decl -> LINEAS .)
    TIPO_ENTERO     reduce using rule 6 (decl -> LINEAS .)
    PALABRA_RESERVADA_BOOL reduce using rule 6 (decl -> LINEAS .)
    TIPO_CARACTER   reduce using rule 6 (decl -> LINEAS .)
    $end            reduce using rule 6 (decl -> LINEAS .)


state 7

    (7) varDecl -> typeSpec . varDeclList SEMICOLON
    (19) funDecl -> typeSpec . VARIABLE PARENTESIS_IZQUIERDO parms PARENTESIS_DERECHO stmt
    (10) varDeclList -> . varDeclList COMA varDeclInit
    (11) varDeclList -> . varDeclInit
    (12) varDeclInit -> . varDeclId
    (13) varDeclInit -> . varDeclId COLON simpleExp
    (14) varDeclId -> . VARIABLE
    (15) varDeclId -> . VARIABLE CORCHETE_IZQUIERDO NUMERO_ENTERO CORCHETE_DERECHO

    VARIABLE        shift and go to state 14

    varDeclList                    shift and go to state 13
    varDeclInit                    shift and go to state 15
    varDeclId                      shift and go to state 16

state 8

    (20) funDecl -> VARIABLE . PARENTESIS_IZQUIERDO parms PARENTESIS_DERECHO stmt

    PARENTESIS_IZQUIERDO shift and go to state 17


state 9

    (16) typeSpec -> TIPO_ENTERO .

    VARIABLE        reduce using rule 16 (typeSpec -> TIPO_ENTERO .)


state 10

    (17) typeSpec -> PALABRA_RESERVADA_BOOL .

    VARIABLE        reduce using rule 17 (typeSpec -> PALABRA_RESERVADA_BOOL .)


state 11

    (18) typeSpec -> TIPO_CARACTER .

    VARIABLE        reduce using rule 18 (typeSpec -> TIPO_CARACTER .)


state 12

    (2) declList -> declList decl .

    LINEAS          reduce using rule 2 (declList -> declList decl .)
    VARIABLE        reduce using rule 2 (declList -> declList decl .)
    TIPO_ENTERO     reduce using rule 2 (declList -> declList decl .)
    PALABRA_RESERVADA_BOOL reduce using rule 2 (declList -> declList decl .)
    TIPO_CARACTER   reduce using rule 2 (declList -> declList decl .)
    $end            reduce using rule 2 (declList -> declList decl .)


state 13

    (7) varDecl -> typeSpec varDeclList . SEMICOLON
    (10) varDeclList -> varDeclList . COMA varDeclInit

    SEMICOLON       shift and go to state 18
    COMA            shift and go to state 19


state 14

    (19) funDecl -> typeSpec VARIABLE . PARENTESIS_IZQUIERDO parms PARENTESIS_DERECHO stmt
    (14) varDeclId -> VARIABLE .
    (15) varDeclId -> VARIABLE . CORCHETE_IZQUIERDO NUMERO_ENTERO CORCHETE_DERECHO

    PARENTESIS_IZQUIERDO shift and go to state 20
    COLON           reduce using rule 14 (varDeclId -> VARIABLE .)
    SEMICOLON       reduce using rule 14 (varDeclId -> VARIABLE .)
    COMA            reduce using rule 14 (varDeclId -> VARIABLE .)
    CORCHETE_IZQUIERDO shift and go to state 21


state 15

    (11) varDeclList -> varDeclInit .

    SEMICOLON       reduce using rule 11 (varDeclList -> varDeclInit .)
    COMA            reduce using rule 11 (varDeclList -> varDeclInit .)


state 16

    (12) varDeclInit -> varDeclId .
    (13) varDeclInit -> varDeclId . COLON simpleExp

    SEMICOLON       reduce using rule 12 (varDeclInit -> varDeclId .)
    COMA            reduce using rule 12 (varDeclInit -> varDeclId .)
    COLON           shift and go to state 22


state 17

    (20) funDecl -> VARIABLE PARENTESIS_IZQUIERDO . parms PARENTESIS_DERECHO stmt
    (21) parms -> . parmList
    (22) parms -> . eps
    (23) parmList -> . parmList SEMICOLON parmTypeList
    (24) parmList -> . parmTypeList
    (110) eps -> .
    (25) parmTypeList -> . typeSpec parmIdList
    (16) typeSpec -> . TIPO_ENTERO
    (17) typeSpec -> . PALABRA_RESERVADA_BOOL
    (18) typeSpec -> . TIPO_CARACTER

    PARENTESIS_DERECHO reduce using rule 110 (eps -> .)
    TIPO_ENTERO     shift and go to state 9
    PALABRA_RESERVADA_BOOL shift and go to state 10
    TIPO_CARACTER   shift and go to state 11

    parms                          shift and go to state 23
    parmList                       shift and go to state 24
    eps                            shift and go to state 25
    parmTypeList                   shift and go to state 26
    typeSpec                       shift and go to state 27

state 18

    (7) varDecl -> typeSpec varDeclList SEMICOLON .

    LINEAS          reduce using rule 7 (varDecl -> typeSpec varDeclList SEMICOLON .)
    VARIABLE        reduce using rule 7 (varDecl -> typeSpec varDeclList SEMICOLON .)
    TIPO_ENTERO     reduce using rule 7 (varDecl -> typeSpec varDeclList SEMICOLON .)
    PALABRA_RESERVADA_BOOL reduce using rule 7 (varDecl -> typeSpec varDeclList SEMICOLON .)
    TIPO_CARACTER   reduce using rule 7 (varDecl -> typeSpec varDeclList SEMICOLON .)
    $end            reduce using rule 7 (varDecl -> typeSpec varDeclList SEMICOLON .)


state 19

    (10) varDeclList -> varDeclList COMA . varDeclInit
    (12) varDeclInit -> . varDeclId
    (13) varDeclInit -> . varDeclId COLON simpleExp
    (14) varDeclId -> . VARIABLE
    (15) varDeclId -> . VARIABLE CORCHETE_IZQUIERDO NUMERO_ENTERO CORCHETE_DERECHO

    VARIABLE        shift and go to state 29

    varDeclInit                    shift and go to state 28
    varDeclId                      shift and go to state 16

state 20

    (19) funDecl -> typeSpec VARIABLE PARENTESIS_IZQUIERDO . parms PARENTESIS_DERECHO stmt
    (21) parms -> . parmList
    (22) parms -> . eps
    (23) parmList -> . parmList SEMICOLON parmTypeList
    (24) parmList -> . parmTypeList
    (110) eps -> .
    (25) parmTypeList -> . typeSpec parmIdList
    (16) typeSpec -> . TIPO_ENTERO
    (17) typeSpec -> . PALABRA_RESERVADA_BOOL
    (18) typeSpec -> . TIPO_CARACTER

    PARENTESIS_DERECHO reduce using rule 110 (eps -> .)
    TIPO_ENTERO     shift and go to state 9
    PALABRA_RESERVADA_BOOL shift and go to state 10
    TIPO_CARACTER   shift and go to state 11

    typeSpec                       shift and go to state 27
    parms                          shift and go to state 30
    parmList                       shift and go to state 24
    eps                            shift and go to state 25
    parmTypeList                   shift and go to state 26

state 21

    (15) varDeclId -> VARIABLE CORCHETE_IZQUIERDO . NUMERO_ENTERO CORCHETE_DERECHO

    NUMERO_ENTERO   shift and go to state 31


state 22

    (13) varDeclInit -> varDeclId COLON . simpleExp
    (60) simpleExp -> . simpleExp PALABRA_RESERVADA_OR andExp
    (61) simpleExp -> . andExp
    (62) andExp -> . andExp PALABRA_RESERVADA_AND unaryRelExp
    (63) andExp -> . unaryRelExp
    (64) unaryRelExp -> . PALABRA_RESERVADA_NOT unaryRelExp
    (65) unaryRelExp -> . relExp
    (66) relExp -> . minmaxExp relop minmaxExp
    (67) relExp -> . minmaxExp
    (74) minmaxExp -> . minmaxExp minmaxop sumExp
    (75) minmaxExp -> . sumExp
    (78) sumExp -> . sumExp sumop mulExp
    (79) sumExp -> . mulExp
    (82) mulExp -> . mulExp mulop unaryExp
    (83) mulExp -> . unaryExp
    (87) unaryExp -> . unaryop unaryExp
    (88) unaryExp -> . factor
    (89) unaryop -> . OPERADOR_RESTA
    (90) unaryop -> . OPERADOR_MULTIPLICAR
    (91) unaryop -> . OP_TERNARIO
    (92) factor -> . immutable
    (93) factor -> . mutable
    (96) immutable -> . PARENTESIS_IZQUIERDO exp PARENTESIS_DERECHO
    (97) immutable -> . call
    (98) immutable -> . constant
    (94) mutable -> . VARIABLE
    (95) mutable -> . VARIABLE CORCHETE_IZQUIERDO exp CORCHETE_DERECHO
    (99) call -> . VARIABLE PARENTESIS_IZQUIERDO args PARENTESIS_DERECHO
    (104) constant -> . NUMERO_ENTERO
    (105) constant -> . NUMERO_DECIMAL
    (106) constant -> . CARACTER
    (107) constant -> . CADENA
    (108) constant -> . PALABRA_RESERVADA_TRUE
    (109) constant -> . PALABRA_RESERVADA_FALSE

    PALABRA_RESERVADA_NOT shift and go to state 35
    OPERADOR_RESTA  shift and go to state 43
    OPERADOR_MULTIPLICAR shift and go to state 44
    OP_TERNARIO     shift and go to state 45
    PARENTESIS_IZQUIERDO shift and go to state 48
    VARIABLE        shift and go to state 51
    NUMERO_ENTERO   shift and go to state 52
    NUMERO_DECIMAL  shift and go to state 53
    CARACTER        shift and go to state 54
    CADENA          shift and go to state 55
    PALABRA_RESERVADA_TRUE shift and go to state 56
    PALABRA_RESERVADA_FALSE shift and go to state 57

    simpleExp                      shift and go to state 32
    andExp                         shift and go to state 33
    unaryRelExp                    shift and go to state 34
    relExp                         shift and go to state 36
    minmaxExp                      shift and go to state 37
    sumExp                         shift and go to state 38
    mulExp                         shift and go to state 39
    unaryExp                       shift and go to state 40
    unaryop                        shift and go to state 41
    factor                         shift and go to state 42
    immutable                      shift and go to state 46
    mutable                        shift and go to state 47
    call                           shift and go to state 49
    constant                       shift and go to state 50

state 23

    (20) funDecl -> VARIABLE PARENTESIS_IZQUIERDO parms . PARENTESIS_DERECHO stmt

    PARENTESIS_DERECHO shift and go to state 58


state 24

    (21) parms -> parmList .
    (23) parmList -> parmList . SEMICOLON parmTypeList

    PARENTESIS_DERECHO reduce using rule 21 (parms -> parmList .)
    SEMICOLON       shift and go to state 59


state 25

    (22) parms -> eps .

    PARENTESIS_DERECHO reduce using rule 22 (parms -> eps .)


state 26

    (24) parmList -> parmTypeList .

    SEMICOLON       reduce using rule 24 (parmList -> parmTypeList .)
    PARENTESIS_DERECHO reduce using rule 24 (parmList -> parmTypeList .)


state 27

    (25) parmTypeList -> typeSpec . parmIdList
    (26) parmIdList -> . parmIdList COMA parmId
    (27) parmIdList -> . parmId
    (28) parmId -> . VARIABLE
    (29) parmId -> . VARIABLE CORCHETE_IZQUIERDO CORCHETE_DERECHO

    VARIABLE        shift and go to state 62

    parmIdList                     shift and go to state 60
    parmId                         shift and go to state 61

state 28

    (10) varDeclList -> varDeclList COMA varDeclInit .

    SEMICOLON       reduce using rule 10 (varDeclList -> varDeclList COMA varDeclInit .)
    COMA            reduce using rule 10 (varDeclList -> varDeclList COMA varDeclInit .)


state 29

    (14) varDeclId -> VARIABLE .
    (15) varDeclId -> VARIABLE . CORCHETE_IZQUIERDO NUMERO_ENTERO CORCHETE_DERECHO

    COLON           reduce using rule 14 (varDeclId -> VARIABLE .)
    SEMICOLON       reduce using rule 14 (varDeclId -> VARIABLE .)
    COMA            reduce using rule 14 (varDeclId -> VARIABLE .)
    CORCHETE_IZQUIERDO shift and go to state 21


state 30

    (19) funDecl -> typeSpec VARIABLE PARENTESIS_IZQUIERDO parms . PARENTESIS_DERECHO stmt

    PARENTESIS_DERECHO shift and go to state 63


state 31

    (15) varDeclId -> VARIABLE CORCHETE_IZQUIERDO NUMERO_ENTERO . CORCHETE_DERECHO

    CORCHETE_DERECHO shift and go to state 64


state 32

    (13) varDeclInit -> varDeclId COLON simpleExp .
    (60) simpleExp -> simpleExp . PALABRA_RESERVADA_OR andExp

    SEMICOLON       reduce using rule 13 (varDeclInit -> varDeclId COLON simpleExp .)
    COMA            reduce using rule 13 (varDeclInit -> varDeclId COLON simpleExp .)
    PALABRA_RESERVADA_OR shift and go to state 65


state 33

    (61) simpleExp -> andExp .
    (62) andExp -> andExp . PALABRA_RESERVADA_AND unaryRelExp

    PALABRA_RESERVADA_OR reduce using rule 61 (simpleExp -> andExp .)
    SEMICOLON       reduce using rule 61 (simpleExp -> andExp .)
    COMA            reduce using rule 61 (simpleExp -> andExp .)
    PARENTESIS_DERECHO reduce using rule 61 (simpleExp -> andExp .)
    CORCHETE_DERECHO reduce using rule 61 (simpleExp -> andExp .)
    PALABRA_RESERVADA_THEN reduce using rule 61 (simpleExp -> andExp .)
    PALABRA_RESERVADA_DO reduce using rule 61 (simpleExp -> andExp .)
    PALABRA_RESERVADA_TO reduce using rule 61 (simpleExp -> andExp .)
    PALABRA_RESERVADA_BY reduce using rule 61 (simpleExp -> andExp .)
    PALABRA_RESERVADA_AND shift and go to state 66


state 34

    (63) andExp -> unaryRelExp .

    PALABRA_RESERVADA_AND reduce using rule 63 (andExp -> unaryRelExp .)
    PALABRA_RESERVADA_OR reduce using rule 63 (andExp -> unaryRelExp .)
    SEMICOLON       reduce using rule 63 (andExp -> unaryRelExp .)
    COMA            reduce using rule 63 (andExp -> unaryRelExp .)
    PARENTESIS_DERECHO reduce using rule 63 (andExp -> unaryRelExp .)
    CORCHETE_DERECHO reduce using rule 63 (andExp -> unaryRelExp .)
    PALABRA_RESERVADA_THEN reduce using rule 63 (andExp -> unaryRelExp .)
    PALABRA_RESERVADA_DO reduce using rule 63 (andExp -> unaryRelExp .)
    PALABRA_RESERVADA_TO reduce using rule 63 (andExp -> unaryRelExp .)
    PALABRA_RESERVADA_BY reduce using rule 63 (andExp -> unaryRelExp .)


state 35

    (64) unaryRelExp -> PALABRA_RESERVADA_NOT . unaryRelExp
    (64) unaryRelExp -> . PALABRA_RESERVADA_NOT unaryRelExp
    (65) unaryRelExp -> . relExp
    (66) relExp -> . minmaxExp relop minmaxExp
    (67) relExp -> . minmaxExp
    (74) minmaxExp -> . minmaxExp minmaxop sumExp
    (75) minmaxExp -> . sumExp
    (78) sumExp -> . sumExp sumop mulExp
    (79) sumExp -> . mulExp
    (82) mulExp -> . mulExp mulop unaryExp
    (83) mulExp -> . unaryExp
    (87) unaryExp -> . unaryop unaryExp
    (88) unaryExp -> . factor
    (89) unaryop -> . OPERADOR_RESTA
    (90) unaryop -> . OPERADOR_MULTIPLICAR
    (91) unaryop -> . OP_TERNARIO
    (92) factor -> . immutable
    (93) factor -> . mutable
    (96) immutable -> . PARENTESIS_IZQUIERDO exp PARENTESIS_DERECHO
    (97) immutable -> . call
    (98) immutable -> . constant
    (94) mutable -> . VARIABLE
    (95) mutable -> . VARIABLE CORCHETE_IZQUIERDO exp CORCHETE_DERECHO
    (99) call -> . VARIABLE PARENTESIS_IZQUIERDO args PARENTESIS_DERECHO
    (104) constant -> . NUMERO_ENTERO
    (105) constant -> . NUMERO_DECIMAL
    (106) constant -> . CARACTER
    (107) constant -> . CADENA
    (108) constant -> . PALABRA_RESERVADA_TRUE
    (109) constant -> . PALABRA_RESERVADA_FALSE

    PALABRA_RESERVADA_NOT shift and go to state 35
    OPERADOR_RESTA  shift and go to state 43
    OPERADOR_MULTIPLICAR shift and go to state 44
    OP_TERNARIO     shift and go to state 45
    PARENTESIS_IZQUIERDO shift and go to state 48
    VARIABLE        shift and go to state 51
    NUMERO_ENTERO   shift and go to state 52
    NUMERO_DECIMAL  shift and go to state 53
    CARACTER        shift and go to state 54
    CADENA          shift and go to state 55
    PALABRA_RESERVADA_TRUE shift and go to state 56
    PALABRA_RESERVADA_FALSE shift and go to state 57

    unaryRelExp                    shift and go to state 67
    relExp                         shift and go to state 36
    minmaxExp                      shift and go to state 37
    sumExp                         shift and go to state 38
    mulExp                         shift and go to state 39
    unaryExp                       shift and go to state 40
    unaryop                        shift and go to state 41
    factor                         shift and go to state 42
    immutable                      shift and go to state 46
    mutable                        shift and go to state 47
    call                           shift and go to state 49
    constant                       shift and go to state 50

state 36

    (65) unaryRelExp -> relExp .

    PALABRA_RESERVADA_AND reduce using rule 65 (unaryRelExp -> relExp .)
    PALABRA_RESERVADA_OR reduce using rule 65 (unaryRelExp -> relExp .)
    SEMICOLON       reduce using rule 65 (unaryRelExp -> relExp .)
    COMA            reduce using rule 65 (unaryRelExp -> relExp .)
    PARENTESIS_DERECHO reduce using rule 65 (unaryRelExp -> relExp .)
    CORCHETE_DERECHO reduce using rule 65 (unaryRelExp -> relExp .)
    PALABRA_RESERVADA_THEN reduce using rule 65 (unaryRelExp -> relExp .)
    PALABRA_RESERVADA_DO reduce using rule 65 (unaryRelExp -> relExp .)
    PALABRA_RESERVADA_TO reduce using rule 65 (unaryRelExp -> relExp .)
    PALABRA_RESERVADA_BY reduce using rule 65 (unaryRelExp -> relExp .)


state 37

    (66) relExp -> minmaxExp . relop minmaxExp
    (67) relExp -> minmaxExp .
    (74) minmaxExp -> minmaxExp . minmaxop sumExp
    (68) relop -> . MENOR_IGUAL
    (69) relop -> . MENOR
    (70) relop -> . MAYOR
    (71) relop -> . MAYOR_IGUAL
    (72) relop -> . IGUAL
    (73) relop -> . DISTINTO
    (76) minmaxop -> . PUNTOS_MAYOR_PUNTOS
    (77) minmaxop -> . PUNTOS_MENOR_PUNTOS
